# celebrityAIBot

./: README.md  app.py  generate_index_file.py  manage.py  pyproject.toml  requirements.txt
.github/workflows/: azure-webapps-python.yml
celebrityAIBot/: asgi.py  settings.py  urls.py  wsgi.py
celebrityAIBotApp/: apps.py  forms.py  urls.py  views.py
celebrityAIBotApp/templates/: apology-message.html  base.html  celebrity-ai.html
