[tool.poetry]
name = "celebrityaibot"
version = "0.1.0"
description = ""
authors = ["mayababu <mayababu73@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
llama-index = "^0.5.16"
django = "^4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
